# Lesson-QT_9

Task_1_v1/: CMakeLists.txt  CMakeLists.txt.user.b47b595  mainwindow.cpp  mainwindow.h  mainwindow.ui  settextmessege.cpp  settextmessege.h  settextmessege.ui  udpworker.cpp  udpworker.h
